@@ -73,7 +73,7 @@ Grid(
 
 
 Block(
-  NavierStokesPerfect(
+  Fluid(
   );
 );
 
