@@ -90,7 +90,7 @@ Grid(
 
 
 Block(
-  NavierStokesPerfect(
+  Fluid(
   );
 );
 
