@@ -103,7 +103,7 @@ Grid(
 
 
 Block(
-  NavierStokesPerfect(
+  Fluid(
     {
     _________________________________________________________________________________________
 
