@@ -168,7 +168,7 @@ Grid(
 
 
 Block(
-  NavierStokesPerfect(
+  Fluid(
     {
     _________________________________________________________________________________________
 
